; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_pgstat.c_pgstat_get_wait_activity.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/postmaster/extr_pgstat.c_pgstat_get_wait_activity.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"unknown wait event\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"ArchiverMain\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"AutoVacuumMain\00", align 1
@.str.3 = private unnamed_addr constant [18 x i8] c"BgWriterHibernate\00", align 1
@.str.4 = private unnamed_addr constant [13 x i8] c"BgWriterMain\00", align 1
@.str.5 = private unnamed_addr constant [17 x i8] c"CheckpointerMain\00", align 1
@.str.6 = private unnamed_addr constant [17 x i8] c"LogicalApplyMain\00", align 1
@.str.7 = private unnamed_addr constant [20 x i8] c"LogicalLauncherMain\00", align 1
@.str.8 = private unnamed_addr constant [11 x i8] c"PgStatMain\00", align 1
@.str.9 = private unnamed_addr constant [15 x i8] c"RecoveryWalAll\00", align 1
@.str.10 = private unnamed_addr constant [18 x i8] c"RecoveryWalStream\00", align 1
@.str.11 = private unnamed_addr constant [14 x i8] c"SysLoggerMain\00", align 1
@.str.12 = private unnamed_addr constant [16 x i8] c"WalReceiverMain\00", align 1
@.str.13 = private unnamed_addr constant [14 x i8] c"WalSenderMain\00", align 1
@.str.14 = private unnamed_addr constant [14 x i8] c"WalWriterMain\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @pgstat_get_wait_activity to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @pgstat_get_wait_activity(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8** %3, align 8
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %19 [
    i32 141, label %5
    i32 140, label %6
    i32 139, label %7
    i32 138, label %8
    i32 137, label %9
    i32 136, label %10
    i32 135, label %11
    i32 134, label %12
    i32 133, label %13
    i32 132, label %14
    i32 131, label %15
    i32 130, label %16
    i32 129, label %17
    i32 128, label %18
  ]

5:                                                ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i8** %3, align 8
  br label %19

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i8** %3, align 8
  br label %19

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.3, i64 0, i64 0), i8** %3, align 8
  br label %19

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.4, i64 0, i64 0), i8** %3, align 8
  br label %19

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.5, i64 0, i64 0), i8** %3, align 8
  br label %19

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.6, i64 0, i64 0), i8** %3, align 8
  br label %19

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.7, i64 0, i64 0), i8** %3, align 8
  br label %19

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.8, i64 0, i64 0), i8** %3, align 8
  br label %19

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.9, i64 0, i64 0), i8** %3, align 8
  br label %19

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.10, i64 0, i64 0), i8** %3, align 8
  br label %19

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.11, i64 0, i64 0), i8** %3, align 8
  br label %19

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.12, i64 0, i64 0), i8** %3, align 8
  br label %19

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.13, i64 0, i64 0), i8** %3, align 8
  br label %19

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.14, i64 0, i64 0), i8** %3, align 8
  br label %19

19:                                               ; preds = %1, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %20 = load i8*, i8** %3, align 8
  ret i8* %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
